<resources>
    <string name="app_name">RFID Library</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="prompt_password">Please enter your password</string>
    <string name="btn_link_to_register">Not a member? Get registered!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to send you password reset instructions.</string>
    <string name="email_id">Email ID</string>
    <string name="add_dialog_title">Add Book</string>
    <string name="edit_dialog_title">Update Book Record</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_tab">TabActivity</string>
    <string name="title_activity_iso15693">Iso15693Activity</string>
    <string name="title_activity_iso14443_a">Iso14443AActivity</string>
    <string name="title_activity_tabs">TabsActivity</string>
    <string name="title_activity_read_w">ReadWActivity</string>
    <string name="title_activity_get_active">GetActive</string>
    <string name="dmin">Dmin:</string>
    <string name="band">Band:</string>
    <string name="dmax">Dmax:</string>
    <string name="power">Power:</string>
    <string name="scantime">ScanTime:</string>
    <string-array name="men_select">
        <item>PWD</item>
        <item>EPC</item>
        <item>TID</item>
        <item>USER</item>
    </string-array>
    <string-array name="Fre_select">
        <item>902.75 MHz</item>
        <item>903.25 MHz</item>
        <item>903.75 MHz</item>
        <item>904.25 MHz</item>
        <item>904.75 MHz</item>
        <item>905.25 MHz</item>
        <item>905.75 MHz</item>
        <item>906.25 MHz</item>
        <item>906.75 MHz</item>
        <item>907.25 MHz</item>
        <item>907.75 MHz</item>
        <item>908.25 MHz</item>
        <item>908.75 MHz</item>
        <item>909.25 MHz</item>
        <item>909.75 MHz</item>
        <item>910.25 MHz</item>
        <item>910.75 MHz</item>
        <item>911.25 MHz</item>
        <item>911.75 MHz</item>
        <item>912.25 MHz</item>
        <item>912.75 MHz</item>
        <item>913.25 MHz</item>
        <item>913.75 MHz</item>
        <item>914.25 MHz</item>
        <item>914.75 MHz</item>
        <item>915.25 MHz</item>
        <item>915.75 MHz</item>
        <item>916.25 MHz</item>
        <item>916.75 MHz</item>
        <item>917.25 MHz</item>
        <item>917.75 MHz</item>
        <item>918.25 MHz</item>
        <item>918.75 MHz</item>
        <item>919.25 MHz</item>
        <item>919.75 MHz</item>
        <item>920.25 MHz</item>
        <item>920.75 MHz</item>
        <item>921.25 MHz</item>
        <item>921.75 MHz</item>
        <item>922.25 MHz</item>
        <item>922.75 MHz</item>
        <item>923.25 MHz</item>
        <item>923.75 MHz</item>
        <item>924.25 MHz</item>
        <item>924.75 MHz</item>
        <item>925.25 MHz</item>
        <item>925.75 MHz</item>
        <item>926.25 MHz</item>
        <item>926.75 MHz</item>
        <item>927.25 MHz</item>
    </string-array>
    <string-array name="Power_select">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
    </string-array>
    <string name="title_activity_scan_mode_group">ScanModeGroup</string>
</resources>
